--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="css/stylesheet.css" rel="stylesheet">
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
     
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -151,17 +154,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="http://www.myhealthchallenge.net">
                             <img class="img-portfolio img-responsive" src="img/portfolio/MyHealthChallenge.png">
                         </a>
                         <h4>My Health Challenge</h4>
-                    </div>
-                </div>
-                <div class="col-md-4 text-center">
-                    <div class="portfolio-item">
-                        <h4 style="margin-top:50px">This page right in front of you!</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
