removed static icons and updated footer

--- a/index.html
+++ b/index.html
@@ -207,21 +207,13 @@
                   </form>
                   <hr class="featurette-divider hidden-lg">
                   <div class="col-md-6">
-                    <address>
+                    <address style="text-align:center;">
                     <h3>You can find me at:</h3>
                     <p><strong>The Beach</strong><br>
-                        Spring Lake, NJ 07762</a><br>
+                        Spring Lake, NJ<br>
                         Phone: (202) 486-5581<br>
                         Email: Ben@Btrebach.com</p>
                     </address>
-<!--
-                    <h3>Or:</h3>
-                    <p><strong>On A Boat</strong><br>
-                        Hobie Cats or 420s</a><br>
-                        Big Boats or Little Ones<br>
-                        Following the wind and the web</p>
-                    </address>
--->
                   </div>
                 </div>
         </div>
@@ -261,7 +253,7 @@
                         <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
                     </div>
                     <hr>
-                    <p>Copyright &copy; BTrebach 2014</p>
+                    <p>&copy; BTrebach 2014</p>
                 </div>
             </div>
         </div>
